style: fixed overflow properties
switch overflow to overflowY

--- a/src/layouts/Footer/styles.module.css
+++ b/src/layouts/Footer/styles.module.css
@@ -10,6 +10,7 @@
   width: 100%;
   padding: 30px;
   margin-top: auto;
+  z-index: -5;
 }
 
 .footer span {
