--- a/src/layouts/SideNavBar/styles.module.css
+++ b/src/layouts/SideNavBar/styles.module.css
@@ -3,7 +3,7 @@
 }
 
 .overlay {
-  position: absolute;
+  position: fixed;
   height: inherit;
   width: 100%;
   background-color: rgba(255, 255, 255, 0);
@@ -21,7 +21,7 @@
 }
 
 .content {
-  position: absolute;
+  position: fixed;
   height: inherit;
   width: 80%;
   background-color: white;
