--- a/src/layouts/TopNavBar/styles.module.css
+++ b/src/layouts/TopNavBar/styles.module.css
@@ -1,4 +1,5 @@
 header {
+  outline: 2px solid blue;
   position: sticky;
   top: 0;
   z-index: 1; /* or any value higher than the z-index of the content underneath */
@@ -11,7 +12,6 @@ header::before {
   left: 0;
   right: 0;
   bottom: 0;
-  /* background-color: white; */
   z-index: -1;
 }
 
